--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -99,6 +99,13 @@
           "target": [
             "TargetHome"
           ]
+        },
+        {
+          "name": "RouteResourcePage",
+          "pattern": "ResourcePage/{id}",
+          "target": [
+            "TargetResourcePage"
+          ]
         }
       ],
       "targets": {
@@ -108,6 +115,13 @@
           "clearControlAggregation": false,
           "viewId": "Home",
           "viewName": "Home"
+        },
+        "TargetResourcePage": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "ResourcePage",
+          "viewName": "ResourcePage"
         }
       }
     },
